removed warnings - except "do not concatenate string with set" not sure how to resolve this